<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse.imp</groupId>
	<artifactId>org.eclipse.imp.pdb.values.benchmarks</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<executions>
					<execution>
						<id>test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>
						-Xmx8g
						-Djub.consumers=CONSOLE,H2
						-Djub.db.file=.benchmarks
						-Djub.rounds.benchmark=10
						<!-- -XX:+PrintCompilation -->
						<!-- -verbose:gc -->
						<!-- -XX:+PrintGCDetails -->
						<!-- -XX:+HeapDumpOnOutOfMemoryError -->
						<!-- -Xloggc:loggc.txt -->				
						<!-- -XX:-BackgroundCompilation -->
					</argLine>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
			</plugin>
			<!-- 
				Executable JAR
				http://maven.apache.org/plugins/maven-shade-plugin/examples/executable-jar.html
	 		-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>					
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>org.slf4j</groupId> -->
<!-- 			<artifactId>slf4j-api</artifactId> -->
<!-- 			<version>1.7.2</version> -->
<!-- 			<scope>compile</scope> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.slf4j</groupId> -->
<!-- 			<artifactId>jul-to-slf4j</artifactId> -->
<!-- 			<version>1.7.2</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>ch.qos.logback</groupId> -->
<!-- 			<artifactId>logback-classic</artifactId> -->
<!-- 			<version>1.0.9</version> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>com.google.caliper</groupId>
			<artifactId>caliper</artifactId>
			<version>1.0-beta-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.google</groupId>
			<artifactId>memory-measurer</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>		
		<dependency>
		    <groupId>com.carrotsearch</groupId>
		    <artifactId>junit-benchmarks</artifactId>
		    <version>0.6.0-SNAPSHOT</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.170</version>
		</dependency>			
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.11</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb</artifactId>
			<version>0.4.0.qualifier</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.imp</groupId>
			<artifactId>org.eclipse.imp.pdb.values</artifactId>
			<version>0.4.0.qualifier</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>org.eclipse.imp</groupId> -->
<!-- 			<artifactId>org.eclipse.imp.pdb.values.persistent.clojure</artifactId> -->
<!-- 			<version>0.0.1-SNAPSHOT</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.eclipse.imp</groupId> -->
<!-- 			<artifactId>org.eclipse.imp.pdb.values.persistent.scala</artifactId> -->
<!-- 			<version>0.0.1-SNAPSHOT</version> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>org.rascalmpl</groupId>
			<artifactId>rascal</artifactId>
			<version>0.6.0.qualifier</version>
		</dependency>		
	</dependencies>

</project>
